# chainything

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROCESSOR_PATTERN_EXPLAINED.md  README.md  payload.json  target_payload.json
crates/chainything/: Cargo.toml  README.md
crates/chainything-ui/: Cargo.toml  README.md
crates/chainything-ui/src/: agent.rs  app.rs  bottom_panel.rs  dag_layout.rs  graph_io.rs  left_panel.rs  llm_modal.rs  main.rs  nodes.rs  payload_parser.rs
crates/chainything-ui/src/agent/: ollama_agent.rs  prompt.rs  tools.rs
crates/chainything-ui/src/nodes/: base_node.rs  blur_node.rs  greyscale_node.rs  image_display_node.rs  image_reader_node.rs  image_saver_node.rs  images.rs  llm.rs  llm_generate_node.rs  model3d.rs  node_registry.rs  ollama_loader_node.rs  resize_node.rs  text.rs  text_display_node.rs  text_input_node.rs  text_saver_node.rs  threshold_node.rs  viewer.rs
crates/chainything-ui/src/nodes/images/: blur_node.rs  greyscale_node.rs  (+8 more)
crates/chainything/examples/: builder_usage.rs  pipeline_creation.rs  processors_chaining.rs
crates/chainything/src/: lib.rs  llm.rs  pipeline_core.rs  processors.rs
crates/chainything/src/llm/: ollama.rs
crates/chainything/src/pipeline_core/: builder.rs  pipeline.rs  registry.rs
crates/chainything/src/processors/: base_processor.rs  blur_processor.rs  image_saver_processor.rs  images.rs  llm.rs  llm_generate_processor.rs  model3d.rs  ollama_loader_processor.rs  resize_processor.rs  text.rs  threshold_processor.rs
crates/ui/: Cargo.toml  nodes.toml
crates/ui/src/: app.rs  bottom_panel.rs  dag_layout.rs  left_panel.rs  main.rs  node_editor.rs  nodes.rs  panel_left.rs  payload_parser.rs  types.rs
crates/ui/src/node_renderer/: base.rs  mod.rs  registry.rs
crates/ui/src/nodes/: base_node.rs  greyscale_node.rs  image_display_node.rs  image_reader_node.rs  image_saver_node.rs  node.rs  node_registry.rs  text_input_node.rs  viewer.rs
(+69 files in other folders)
