[package]
name = "chainything-ui"
version = "0.1.0"
edition = "2024"
description = "Visual node editor for Chainything DAG pipeline engine"
license = "MIT"
repository = "https://github.com/Bessouat40/chainything"
readme = "README.md"
keywords = ["dag", "pipeline", "workflow", "ui", "egui"]
categories = ["development-tools", "graphics"]

[dependencies]
chainything = { version = "0.1.0", path = "../chainything" }
dyn-clone = "1.0.20"
eframe = "0.34.3"
egui = "0.34.3"
egui-snarl = "0.10.0"
egui_extras = { version = "0.34.3", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg"] }
env_logger = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rfd = "0.17.2"
