[package]
name = "chainything"
version = "0.3.0"
edition = "2024"
description = "A Rust-based DAG pipeline execution engine with strong typing and automatic topological sorting"
license = "MIT"
repository = "https://github.com/Bessouat40/chainything"
readme = "README.md"
keywords = ["dag", "pipeline", "workflow", "processor"]
categories = ["development-tools"]

[dependencies]
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
indexmap = { version = "2.0", features = ["serde"] }
ureq = { version = "2.12", features = ["json"] }
